@startuml
skinparam linetype ortho
class Base {
  +Datetime created_date
  +DateTime updated_date
}
class LocalConf {
  +CharField() fa_name attr=>length=50 ,null=True
}

note top of LocalConf : add fa_name field for save farsi text .
class Country {
   +CharField Country length=50
   +DateTime last_update
}
class Category {
   +CharField name length=50
   +DateTime last_update
}
class Language {
   +CharField name length=50
   +DateTime last_update
}
class City {
   +CharField city length=50
   +DateTime last_update
}

Base <|-right-Country
LocalConf <|--Country

Base <|-right-Category
LocalConf <|--Category

Base <|-left- Language
LocalConf <|-- Language

Base <|-left- City
LocalConf <|-- City

Country ||--o{ City
@enduml